# jlibffi

./: CMakeLists.txt  jffi.cpp  jlibffi.cpp
